# auth_api

./: CHANGELOG.md  Dockerfile  pyproject.toml
auth_api/: README.md  auth.py  deps.py  lib_cfg.py  lib_mail.py  main.py  models.py
auth_api/repositories/: users.py
auth_api/routers/: forms.py  token.py  users.py
ressources/: users.sql
ressources/schema_updates/: 27032021.sql
scripts/: manage.py
templates/: lost_password.html  new_account.html
