[tool.poetry]
name = "auth_api"
version = "0.1.0"
description = "OJ Auth Api"
authors = ["pmontens <pieterjan@montens.net>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
click = "^7.1.2"
pytz = "^2021.1"
uvicorn = "^0.13.4"
PyYAML = "^5.4.1"
asyncpg = "^0.22.0"
toml = "^0.10.2"
airtable = "^0.4.8"
aiofiles = "^0.6.0"
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-jose = "^3.2.0"
python-multipart = "^0.0.5"
cryptography = "^3.4.6"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
flake8 = "^3.8.4"
pylint = "^2.7.2"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "auth_api.main:main"
